== 0.1.3

* 1 bug fix:

* 2 majar enhancement:
  * Publish::Mail plugin is added.

== 0.1.2

* 1 bug fix:
  * rss 1.0 format bug is fixed. (RSS::save)

* 2 majar enhancement:
  * Error handling of plugin is added.
  * Plugin load error has more detailed informations.

== 0.1.1

* 1 bug fix:
  * Publish::Imap, mailbox select fixed.
  * Spec files are added.

* 2 majar enhancement:
  * A few plugins are added.
  * RDoc is improved.
  * -d option is added.
  * Source code management is migrated to github.com.

== 0.1.0 2008-06-20

* 1 major enhancement:
  * Initial release